[gd_scene load_steps=10 format=3 uid="uid://dtjrjpehlt47h"]

[ext_resource type="Script" uid="uid://dq0w5cx58ippp" path="res://enemies/enemy.gd" id="1_fw1ev"]
[ext_resource type="Shader" uid="uid://co2ghn58u5gh" path="res://enemies/enemy_damage_effect.gdshader" id="2_orwns"]
[ext_resource type="Texture2D" uid="uid://blhfoep1umuhy" path="res://Simple Tower Defense/Enemies/spr_bat.png" id="3_a6vjd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7k104"]
radius = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_07tka"]
resource_local_to_scene = true
shader = ExtResource("2_orwns")
shader_parameter/flash_color = Color(0.768627, 0.141176, 0.188235, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_4gyqm"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7k104"]
resource_name = "fly"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qi2p4"]
_data = {
&"RESET": SubResource("Animation_4gyqm"),
&"fly": SubResource("Animation_7k104")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_orwns"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 6.0
scale_min = 2.0
scale_max = 2.0
color = Color(0.2, 0.596078, 0.294118, 1)

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_fw1ev")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7k104")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_07tka")
texture = ExtResource("3_a6vjd")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qi2p4")
}
autoplay = "fly"

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageEffectTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="IcedTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PoisonedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PoisonDamageTimer" type="Timer" parent="."]

[node name="PoisonParticles" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_orwns")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
